--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -21,7 +21,7 @@ jobs:
   deploy:
     working_directory: ~/app
     docker:
-      - image: circleci/elixir:1.6
+      - image: dnsbty/elixir-build:latest
         environment:
           MIX_ENV: prod
     steps:
@@ -56,10 +56,10 @@ workflows:
   version: 2
   build-deploy:
     jobs:
-      - build
+      # - build
       - deploy:
-          requires:
-            - build
+          # requires:
+          #   - build
           filters:
             branches:
               only: master
