--- a/.github/workflows/verify.yml
+++ b/.github/workflows/verify.yml
@@ -84,6 +84,6 @@ jobs:
         with:
           GIGALIXIR_USERNAME: ${{ secrets.GIGALIXIR_USERNAME }}
           GIGALIXIR_PASSWORD: ${{ secrets.GIGALIXIR_PASSWORD }}
-          GIGALIXIR_APP: <your app name>
+          GIGALIXIR_APP: ressipy
           SSH_PRIVATE_KEY: ${{ secrets.SSH_PRIVATE_KEY }}
 
