--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -34,6 +34,9 @@ jobs:
       - name: Save DigitalOcean kubeconfig
         run: doctl kubernetes cluster kubeconfig save dnsbty-k8s
 
+      - name: Run database migrations
+        run: ./bin/migrate.sh
+
       - name: Deploy to DigitalOcean Kubernetes
         run: kubectl set image deployments/ressipy ressipy=${REGISTRY_URL}:$(echo $GITHUB_SHA | head -c7)
 
