run migrations with the latest image
Previously whenever migrations ran, they would just use the image that
was already in place. This will pass the image ID to the migration
script so that it will run the migrations from the latest version of the
Docker image.

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -35,7 +35,7 @@ jobs:
         run: doctl kubernetes cluster kubeconfig save dnsbty-k8s
 
       - name: Run database migrations
-        run: ./bin/migrate.sh
+        run: ./bin/migrate.sh $(echo $GITHUB_SHA | head -c7)
 
       - name: Deploy to DigitalOcean Kubernetes
         run: kubectl set image deployments/ressipy ressipy=${REGISTRY_URL}:$(echo $GITHUB_SHA | head -c7)
