decrease pool size

--- a/k8s/deployment.yaml
+++ b/k8s/deployment.yaml
@@ -67,6 +67,8 @@ spec:
                 secretKeyRef:
                   name: ressipy
                   key: databaseUrl
+            - name: POOL_SIZE
+              value: "2"
             - name: SECRET_KEY_BASE
               valueFrom:
                 secretKeyRef:
