--- a/k8s/migrations.yaml
+++ b/k8s/migrations.yaml
@@ -29,6 +29,8 @@ spec:
               secretKeyRef:
                 name: ressipy
                 key: messageBirdAccessKey
+          - name: POOL_SIZE
+            value: "2"
           - name: SECRET_KEY_BASE
             valueFrom:
               secretKeyRef:
