--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -3,10 +3,8 @@ on: push
 jobs:
   verify:
     runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        otp: [22.3.1]
-        elixir: [1.10.2]
+    env:
+      MIX_ENV: test
 
     services:
       db:
@@ -20,15 +18,15 @@ jobs:
 
     steps:
       - uses: actions/checkout@v2
-      - uses: actions/setup-elixir@v1
+      - uses: erlef/setup-beam@v1
         with:
-          otp-version: ${{ matrix.otp }}
-          elixir-version: ${{ matrix.elixir }}
+          otp-version: '23.1.5'
+          elixir-version: '1.11.2'
 
       - name: Setup Node
         uses: actions/setup-node@v1
         with:
-          node-version: 13.8.0
+          node-version: 14.15.3
 
       - uses: actions/cache@v1
         id: deps-cache
@@ -58,5 +56,8 @@ jobs:
           mix deps.get
           (cd assets && yarn)
 
-      - run: mix format --check-formatted
-      - run: mix test
+      - name: Check formatting
+        run: mix format --check-formatted
+
+      - name: Run the test suite
+        run: mix test
